# polybot

./: .editorconfig  README.md  example.py  pyproject.toml  requirements.txt
polybot/: __init__.py  app.py  app_context.py
polybot/channel/: __init__.py  builder.py  channel.py  channel_interface.py  order_book_manager.py  order_manager.py  position_manager.py  strategy_router.py  strategy_view.py
polybot/common/: context_provider.py  enums.py  orderbook.py  strategy_context.py  types.py
polybot/common/datastructures/: __init__.py  two_way_dict.py
polybot/common/exceptions/: __init__.py  channel.py
polybot/config/: strategy_config.py
polybot/connection/: ws_connection_base.py
polybot/eml/: __init__.py  eml_base.py  exec_link.py  interface.py
polybot/ids/: __init__.py  instrument_definition_store.py  interface.py
polybot/iml/: __init__.py  iml_base.py  interface.py  messages.py
polybot/limits/: __init__.py  limit.py  limit_checker.py  limit_store.py
polybot/polymarket/: __init__.py  credentials.py  interfaces.py  polymarket.eml.py  polymarket_clob_client.py  polymarket_gem.py  polymarket_iml.py  polymarket_ws.py
polybot/state/: __init__.py  order_id_generator.py  order_manager.py
polybot/strategy/: __init__.py  config.py  factory.py  metadata.py  registry.py  strategy.py
sdk/: __init__.py  base_strategy.py  credentials.py  enums.py  polybot.py  registration.py  runtime.py  types.py
sdk/internal/: __init__.py  registry.py  strategy_wrapper.py
strategies/implementations/: __init__.py
tests/integration/: polymarket_test.py
(+2 files in other folders)
