[project]
name = ""
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
	"hexbytes==1.3.1",
	"pydantic==2.12.5",
	"pydantic-core==2.41.5",
	"python-dateutil==2.9.0.post0",
	"six==1.17.0",
	"typing-inspection==0.4.2",
	"typing-extensions==4.15.0",
	"websocket-client==1.9.0",
	"pyyaml>=6.0.3",
	"pytest>=9.0.2",
]

[tool.uv]
package = false
